atualização de projetos

--- a/index.html
+++ b/index.html
@@ -62,11 +62,14 @@
             <h2>Projetos</h2>
             <div id="fotos">
                 <ul class="fotos-ul">
-                    <li><img src="img/Site BC.png" alt="Foto site Beauty Company"></li>
-                    <li><img src="img/Site cordel.png" alt="Site cordel"></li>
+                    <li><img src="img/site-BC-2.png" alt="Foto site Beauty Company"></li>
+                    <li><img src="img/site-BC-área-de-trabalho.png" alt="Foto site Beauty Company"></li>
+                    <li><img src="img/site-BC-pedidos.png" alt="Foto site Beauty Company"></li>
+                    <li><img src="img/site-cordel.png" alt="Site cordel"></li>
                     <li><img src="img/Site portifolio.png" alt="Site Portifólio"></li>
-                    <li><img src="img/Landingpage.png" alt="Site Landingpage 1"></li>
+                    <li><img src="img/landingpage-2.png" alt="Site Landingpage 1"></li>
                     <li><img src="img/projeto rede-social.png" alt="Site Rede Social"></li>
+                    <li><img src="img/site teste-responsivo.png" alt="Site Rede Social"></li>
                     <li><img src="img/Site menu responsivo tela-maior.png" alt="Site Menu Responsivo"></li>
                     <li><img src="img/Site menu responsivo mb-first.png" alt="Site Menu responsivo mobile-first"></li>
                 </ul>
