ajuste no menu e imagens

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav>
-        <a href="#">Mit Dev</a>
+        <h1>Mit Dev</h1>
         <ul>
             <li>
                 <a href="#Sobre">Sobre</a>
